--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,11 @@ test:
   stage: test
   image: golang:${GO_VERSION}-alpine
   before_script:
-    - apk add --no-cache git terraform
+    - apk add --no-cache git wget unzip
+    - wget -O terraform.zip https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip
+    - unzip terraform.zip
+    - mv terraform /usr/local/bin/
+    - terraform version
     - go mod download
     - go mod verify
   script:
