--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,18 +72,14 @@ sync-github:
   stage: sync-github
   image: alpine:latest
   before_script:
-    - apk add --no-cache git openssh-client
-    - mkdir -p ~/.ssh
-    - echo "$GITHUB_SSH_KEY" > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
-    - ssh-keyscan github.com >> ~/.ssh/known_hosts
+    - apk add --no-cache git
     - git config --global user.name "GitLab CI"
     - git config --global user.email "ci@gitlab.nrp-nautilus.io"
   script:
     # Ensure we're working with clean source code only
     - echo "🧹 Ensuring clean source code sync..."
     - git status
-    - git remote add github git@github.com:nrp-nautilus/terraform-provider-kubevirt.git
+    - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
     - git fetch origin
     # Only push source code, no binaries
     - git push github main --force
@@ -94,5 +90,3 @@ sync-github:
     - if: $CI_COMMIT_TAG
   dependencies:
     - release
-  only:
-    - tags
