--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - test
   - build
   - release
-  # - sync-github  # Temporarily disabled for testing
+  - sync-github
 
 variables:
   GO_VERSION: "1.21"
@@ -67,26 +67,26 @@ release:
   dependencies:
     - build
 
-# GitHub Sync stage - Temporarily disabled for testing
-# sync-github:
-#   stage: sync-github
-#   image: alpine:latest
-#   before_script:
-#     - apk add --no-cache git
-#     - git config --global user.name "GitLab CI"
-#     - git config --global user.email "ci@gitlab.nrp-nautilus.io"
-#   script:
-#     # Ensure we're working with clean source code only
-#     - echo "🧹 Ensuring clean source code sync..."
-#     - git status
-#     - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
-#     - git fetch origin
-#     # Only push source code, no binaries
-#     - git push github main --force
-#     - git push github --tags --force
-#     - echo "✅ Successfully synced SOURCE CODE ONLY to GitHub"
-#     - echo "📦 Binaries are stored as GitLab artifacts, not in repos"
-#   rules:
-#     - if: $CI_COMMIT_TAG
-#   dependencies:
-#     - release
+# GitHub Sync stage
+sync-github:
+  stage: sync-github
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache git
+    - git config --global user.name "GitLab CI"
+    - git config --global user.email "ci@gitlab.nrp-nautilus.io"
+  script:
+    # Ensure we're working with clean source code only
+    - echo "🧹 Ensuring clean source code sync..."
+    - git status
+    - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
+    - git fetch origin
+    # Only push source code, no binaries
+    - git push github main --force
+    - git push github --tags --force
+    - echo "✅ Successfully synced SOURCE CODE ONLY to GitHub"
+    - echo "📦 Binaries are stored as GitLab artifacts, not in repos"
+  rules:
+    - if: $CI_COMMIT_TAG
+  dependencies:
+    - release
