--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   - test
-  - build
+  - fetch-github-results
   - release
   - sync-github
 
@@ -29,25 +29,80 @@ test:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
-# Build stage
-build:
-  stage: build
-  image: golang:${GO_VERSION}-alpine
+# Fetch GitHub Build Results stage
+fetch-github-results:
+  stage: fetch-github-results
+  image: alpine:latest
   before_script:
-    - apk add --no-cache git
-    - go mod download
+    - apk add --no-cache curl jq
   script:
-    - mkdir -p bin
-    - GOOS=linux GOARCH=amd64 go build -o bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA} .
-    - GOOS=darwin GOARCH=amd64 go build -o bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}_darwin .
-    - ls -la bin/
+    - echo "🔍 Fetching build results from GitHub..."
+    - echo "Tag: ${CI_COMMIT_TAG}"
+    
+    # Wait for GitHub Actions to complete (with timeout)
+    - |
+      TIMEOUT=300  # 5 minutes
+      ELAPSED=0
+      while [ $ELAPSED -lt $TIMEOUT ]; do
+        echo "⏳ Waiting for GitHub Actions to complete... (${ELAPSED}s elapsed)"
+        
+        # Check if GitHub release exists
+        RELEASE_URL="https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/releases/tags/${CI_COMMIT_TAG}"
+        RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" "$RELEASE_URL")
+        
+        if echo "$RESPONSE" | jq -e '.id' > /dev/null 2>&1; then
+          echo "✅ GitHub release found!"
+          echo "$RESPONSE" | jq '.name, .tag_name, .html_url'
+          break
+        fi
+        
+        sleep 30
+        ELAPSED=$((ELAPSED + 30))
+      done
+      
+      if [ $ELAPSED -ge $TIMEOUT ]; then
+        echo "❌ Timeout waiting for GitHub Actions to complete"
+        exit 1
+      fi
+    
+    # Download the built binaries from GitHub release
+    - |
+      echo "📥 Downloading binaries from GitHub release..."
+      ASSETS_URL="https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/releases/tags/${CI_COMMIT_TAG}/assets"
+      ASSETS=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" "$ASSETS_URL")
+      
+      # Create bin directory
+      mkdir -p bin
+      
+      # Download each asset
+      echo "$ASSETS" | jq -r '.[].browser_download_url' | while read -r URL; do
+        if [ -n "$URL" ]; then
+          FILENAME=$(basename "$URL")
+          echo "Downloading: $FILENAME"
+          curl -L -H "Authorization: token ${GITHUB_TOKEN}" -o "bin/$FILENAME" "$URL"
+        fi
+      done
+      
+      ls -la bin/
+      
+      if [ ! -f "bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}" ]; then
+        echo "❌ Linux binary not found in GitHub release"
+        exit 1
+      fi
+      
+      if [ ! -f "bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}_darwin" ]; then
+        echo "❌ Darwin binary not found in GitHub release"
+        exit 1
+      fi
+      
+      echo "✅ All binaries downloaded successfully from GitHub!"
   artifacts:
     paths:
       - bin/
     expire_in: 1 week
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     - if: $CI_COMMIT_TAG
+  dependencies: []
 
 # Release stage
 release:
@@ -60,12 +115,12 @@ release:
       release-cli create \
         --name "Release ${CI_COMMIT_TAG}" \
         --tag-name $CI_COMMIT_TAG \
-        --assets-link "{\"name\":\"terraform-provider-${PROVIDER_NAME}-linux-amd64\",\"url\":\"${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}?job=build\"}" \
-        --assets-link "{\"name\":\"terraform-provider-${PROVIDER_NAME}-darwin-amd64\",\"url\":\"${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}_darwin?job=build\"}"
+        --assets-link "{\"name\":\"terraform-provider-${PROVIDER_NAME}-linux-amd64\",\"url\":\"${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}?job=fetch-github-results\"}" \
+        --assets-link "{\"name\":\"terraform-provider-${PROVIDER_NAME}-darwin-amd64\",\"url\":\"${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}_darwin?job=fetch-github-results\"}"
   rules:
     - if: $CI_COMMIT_TAG
   dependencies:
-    - build
+    - fetch-github-results
 
 # GitHub Sync stage
 sync-github:
