--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,11 +38,12 @@ fetch-github-results:
   script:
     - echo "🔍 Fetching build results from GitHub..."
     - echo "Tag: ${CI_COMMIT_TAG}"
+    - echo "⏳ Waiting for GitHub Actions to complete..."
     
     # Wait for GitHub Actions to complete (with timeout)
+    - TIMEOUT=300
+    - ELAPSED=0
     - |
-      TIMEOUT=300  # 5 minutes
-      ELAPSED=0
       while [ $ELAPSED -lt $TIMEOUT ]; do
         echo "⏳ Waiting for GitHub Actions to complete... (${ELAPSED}s elapsed)"
         
@@ -66,15 +67,13 @@ fetch-github-results:
       fi
     
     # Download the built binaries from GitHub release
+    - echo "📥 Downloading binaries from GitHub release..."
+    - ASSETS_URL="https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/releases/tags/${CI_COMMIT_TAG}/assets"
+    - ASSETS=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" "$ASSETS_URL")
+    - mkdir -p bin
+    
+    # Download each asset
     - |
-      echo "📥 Downloading binaries from GitHub release..."
-      ASSETS_URL="https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/releases/tags/${CI_COMMIT_TAG}/assets"
-      ASSETS=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" "$ASSETS_URL")
-      
-      # Create bin directory
-      mkdir -p bin
-      
-      # Download each asset
       echo "$ASSETS" | jq -r '.[].browser_download_url' | while read -r URL; do
         if [ -n "$URL" ]; then
           FILENAME=$(basename "$URL")
@@ -82,9 +81,11 @@ fetch-github-results:
           curl -L -H "Authorization: token ${GITHUB_TOKEN}" -o "bin/$FILENAME" "$URL"
         fi
       done
-      
-      ls -la bin/
-      
+    
+    - ls -la bin/
+    
+    # Verify binaries exist
+    - |
       if [ ! -f "bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}" ]; then
         echo "❌ Linux binary not found in GitHub release"
         exit 1
