--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,12 +65,8 @@ release:
   before_script:
     - echo "Creating release for version ${CI_COMMIT_TAG}"
   script:
-    - |
-      release-cli create \
-        --name "Release ${CI_COMMIT_TAG}" \
-        --tag-name $CI_COMMIT_TAG \
-        --assets-link "{\"name\":\"terraform-provider-${PROVIDER_NAME}-linux-amd64\",\"url\":\"${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}?job=fetch-github-results\"}" \
-        --assets-link "{\"name\":\"terraform-provider-${PROVIDER_NAME}-darwin-amd64\",\"url\":\"${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}_darwin?job=fetch-github-results\"}"
+    - echo "Creating release with assets..."
+    - release-cli create --name "Release ${CI_COMMIT_TAG}" --tag-name $CI_COMMIT_TAG --assets-link "{\"name\":\"terraform-provider-${PROVIDER_NAME}-linux-amd64\",\"url\":\"${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}?job=fetch-github-results\"}" --assets-link "{\"name\":\"terraform-provider-${PROVIDER_NAME}-darwin-amd64\",\"url\":\"${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/bin/terraform-provider-${PROVIDER_NAME}_${CI_COMMIT_SHA}_darwin?job=fetch-github-results\"}"
   rules:
     - if: $CI_COMMIT_TAG
   dependencies:
