Fix GitHub Actions permissions - add explicit contents:write permission for releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,11 @@ env:
   GO_VERSION: '1.21'
   PROVIDER_NAME: 'kubevirt'
 
+# Add explicit permissions for creating releases
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   test:
     name: Test
