--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,3 +56,25 @@ fetch-github-results:
   rules:
     - if: $CI_COMMIT_TAG
   dependencies: []
+
+# GitHub Sync stage
+sync-github:
+  stage: sync-github
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache git
+    - git config --global user.name "GitLab CI"
+    - git config --global user.email "ci@gitlab.nrp-nautilus.io"
+  script:
+    - echo "🧹 Ensuring clean source code sync..."
+    - git status
+    - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
+    - git fetch origin
+    - git push github main --force
+    - git push github --tags --force
+    - echo "✅ Successfully synced SOURCE CODE ONLY to GitHub"
+    - echo "📦 Binaries are stored as GitLab artifacts, not in repos"
+  rules:
+    - if: $CI_COMMIT_TAG
+  dependencies:
+    - fetch-github-results
