--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - test
+  - go-test
 
 test:
   stage: test
@@ -7,5 +8,27 @@ test:
   script:
     - echo "Hello World"
     - echo "Simple CI/CD test"
+  rules:
+    - if: $CI_COMMIT_TAG
+
+go-test:
+  stage: go-test
+  image: golang:1.21-alpine
+  before_script:
+    - apk add --no-cache git wget unzip
+    - wget -O terraform.zip https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip
+    - unzip terraform.zip
+    - mv terraform /usr/local/bin/
+    - terraform version
+    - go mod download
+    - go mod verify
+  script:
+    - echo "Running Go tests..."
+    - go test -v ./...
+    - echo "Running Go vet..."
+    - go vet ./...
+    - echo "Running Go fmt check..."
+    - go fmt ./...
+    - echo "✅ Go tests completed successfully!"
   rules:
     - if: $CI_COMMIT_TAG
