--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - test
   - go-test
+  - fetch-github-results
 
 test:
   stage: test
@@ -32,3 +33,21 @@ go-test:
     - echo "✅ Go tests completed successfully!"
   rules:
     - if: $CI_COMMIT_TAG
+
+fetch-github-results:
+  stage: fetch-github-results
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache curl jq
+  script:
+    - echo "🔍 Phase 3: Basic GitHub API check..."
+    - echo "Tag: ${CI_COMMIT_TAG}"
+    - echo "Checking if GitHub has this tag..."
+    - RELEASE_URL="https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/releases/tags/${CI_COMMIT_TAG}"
+    - echo "GitHub API URL: $RELEASE_URL"
+    - RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" "$RELEASE_URL")
+    - echo "GitHub API Response: $RESPONSE"
+    - echo "✅ Phase 3 completed - basic GitHub API check"
+  rules:
+    - if: $CI_COMMIT_TAG
+  dependencies: []
