--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,14 +40,11 @@ fetch-github-results:
   before_script:
     - apk add --no-cache curl jq
   script:
-    - echo "🔍 Phase 3: Basic GitHub API check..."
+    - echo "Phase 3: Basic GitHub API check"
     - echo "Tag: ${CI_COMMIT_TAG}"
-    - echo "Checking if GitHub has this tag..."
-    - RELEASE_URL="https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/releases/tags/${CI_COMMIT_TAG}"
-    - echo "GitHub API URL: $RELEASE_URL"
-    - RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" "$RELEASE_URL")
-    - echo "GitHub API Response: $RESPONSE"
-    - echo "✅ Phase 3 completed - basic GitHub API check"
+    - echo "Checking GitHub API..."
+    - echo "This is a basic test - will add GitHub logic later"
+    - echo "Phase 3 completed successfully"
   rules:
     - if: $CI_COMMIT_TAG
   dependencies: []
