--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ fetch-github-results:
     - apk add --no-cache curl jq
   script:
     - echo "Phase 3: Basic GitHub API check"
-    - echo "Tag: ${CI_COMMIT_TAG}"
+    - echo "Tag check stage"
     - echo "Checking GitHub API..."
     - echo "This is a basic test - will add GitHub logic later"
     - echo "Phase 3 completed successfully"
