--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,10 +40,10 @@ fetch-github-results:
   before_script:
     - apk add --no-cache curl jq
   script:
-    - echo "Phase 3: Basic GitHub API check"
+    - echo "Phase 3 Basic GitHub API check"
     - echo "Tag check stage"
-    - echo "Checking GitHub API..."
-    - echo "This is a basic test - will add GitHub logic later"
+    - echo "Checking GitHub API"
+    - echo "Basic test will add GitHub logic later"
     - echo "Phase 3 completed successfully"
   rules:
     - if: $CI_COMMIT_TAG
