--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - test
   - go-test
   - fetch-github-results
+  - sync-github
 
 test:
   stage: test
@@ -45,6 +46,20 @@ fetch-github-results:
     - echo "Checking GitHub API"
     - echo "Basic test will add GitHub logic later"
     - echo "Phase 3 completed successfully"
+  rules:
+    - if: $CI_COMMIT_TAG
+  dependencies: []
+
+sync-github:
+  stage: sync-github
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache git
+  script:
+    - echo "Phase 4 Basic GitHub sync"
+    - echo "Setting up git for GitHub push"
+    - echo "Will add actual sync logic later"
+    - echo "Phase 4 completed successfully"
   rules:
     - if: $CI_COMMIT_TAG
   dependencies: []
