--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,20 +56,20 @@ sync-github:
   before_script:
     - apk add --no-cache git
   script:
-    - echo "Phase 4: Real GitHub sync starting (HTTPS with token)"
+    - echo "Phase 4 Real GitHub sync starting HTTPS with token"
     - echo "Setting up git with GitHub token"
     - git config --global user.email "ci@gitlab.nrp-nautilus.io"
     - git config --global user.name "GitLab CI"
-    - echo "Cloning GitHub repository (HTTPS)"
+    - echo "Cloning GitHub repository HTTPS"
     - git clone https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git github-repo
     - cd github-repo
-    - echo "Adding GitLab as remote (HTTPS)"
+    - echo "Adding GitLab as remote HTTPS"
     - git remote add gitlab https://gitlab.nrp-nautilus.io/nrp/kubevirt-terraform-provider.git
     - echo "Fetching latest from GitLab"
     - git fetch gitlab
     - echo "Pushing to GitHub main branch"
     - git push origin gitlab/main:main --force
-    - echo "Phase 4: GitHub sync completed successfully"
+    - echo "Phase 4 GitHub sync completed successfully"
   rules:
     - if: $CI_COMMIT_TAG
   dependencies: []
