--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,15 +73,29 @@ sync-github:
     - echo "Validating GitHub received our code"
     - sleep 10
     - echo "Checking GitHub API for latest commit"
-    - LATEST_COMMIT=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/commits/main" | jq -r '.sha')
+    - curl -s -H "Authorization: token ${GITHUB_TOKEN}" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/commits/main" > github_response.json
+    - LATEST_COMMIT=$(jq -r '.sha' github_response.json)
     - echo "Latest GitHub commit: ${LATEST_COMMIT}"
     - GITLAB_COMMIT=$(git rev-parse HEAD)
     - echo "GitLab commit: ${GITLAB_COMMIT}"
-    - if [ "${LATEST_COMMIT:0:7}" != "${GITLAB_COMMIT:0:7}" ]; then echo "ERROR: GitHub commit mismatch! Pipeline should fail!"; exit 1; fi
+    - echo "Comparing commit hashes"
+    - echo "GitHub: ${LATEST_COMMIT:0:7}"
+    - echo "GitLab: ${GITLAB_COMMIT:0:7}"
+    - if [ "${LATEST_COMMIT:0:7}" != "${GITLAB_COMMIT:0:7}" ]
+    - then
+    -   echo "ERROR: GitHub commit mismatch! Pipeline should fail!"
+    -   exit 1
+    - fi
     - echo "GitHub commit validation passed"
     - echo "Checking if GitHub Actions workflow started"
-    - WORKFLOW_RUNS=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/actions/runs?per_page=1" | jq '.workflow_runs | length')
-    - if [ "$WORKFLOW_RUNS" -eq 0 ]; then echo "ERROR: No GitHub Actions runs found! Pipeline should fail!"; exit 1; fi
+    - curl -s -H "Authorization: token ${GITHUB_TOKEN}" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/actions/runs?per_page=1" > workflow_response.json
+    - WORKFLOW_RUNS=$(jq '.workflow_runs | length' workflow_response.json)
+    - echo "Workflow runs found: ${WORKFLOW_RUNS}"
+    - if [ "$WORKFLOW_RUNS" -eq 0 ]
+    - then
+    -   echo "ERROR: No GitHub Actions runs found! Pipeline should fail!"
+    -   exit 1
+    - fi
     - echo "GitHub Actions workflow found - validation passed"
   rules:
     - if: $CI_COMMIT_TAG
