--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,28 +75,34 @@ sync-github:
     - echo "Checking GitHub API for latest commit"
     - curl -s -H "Authorization: token ${GITHUB_TOKEN}" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/commits/main" > github_response.json
     - LATEST_COMMIT=$(jq -r '.sha' github_response.json)
-    - echo "Latest GitHub commit: ${LATEST_COMMIT}"
+    - echo "Latest GitHub commit"
+    - echo "$LATEST_COMMIT"
     - GITLAB_COMMIT=$(git rev-parse HEAD)
-    - echo "GitLab commit: ${GITLAB_COMMIT}"
+    - echo "GitLab commit"
+    - echo "$GITLAB_COMMIT"
     - echo "Comparing commit hashes"
-    - echo "GitHub: ${LATEST_COMMIT:0:7}"
-    - echo "GitLab: ${GITLAB_COMMIT:0:7}"
-    - if [ "${LATEST_COMMIT:0:7}" != "${GITLAB_COMMIT:0:7}" ]
+    - echo "GitHub commit hash"
+    - echo "$LATEST_COMMIT"
+    - echo "GitLab commit hash"
+    - echo "$GITLAB_COMMIT"
+    - echo "Checking if commits match"
+    - if [ "$LATEST_COMMIT" != "$GITLAB_COMMIT" ]
     - then
-    -   echo "ERROR: GitHub commit mismatch! Pipeline should fail!"
+    -   echo "ERROR GitHub commit mismatch Pipeline should fail"
     -   exit 1
     - fi
     - echo "GitHub commit validation passed"
     - echo "Checking if GitHub Actions workflow started"
     - curl -s -H "Authorization: token ${GITHUB_TOKEN}" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/actions/runs?per_page=1" > workflow_response.json
     - WORKFLOW_RUNS=$(jq '.workflow_runs | length' workflow_response.json)
-    - echo "Workflow runs found: ${WORKFLOW_RUNS}"
+    - echo "Workflow runs found"
+    - echo "$WORKFLOW_RUNS"
     - if [ "$WORKFLOW_RUNS" -eq 0 ]
     - then
-    -   echo "ERROR: No GitHub Actions runs found! Pipeline should fail!"
+    -   echo "ERROR No GitHub Actions runs found Pipeline should fail"
     -   exit 1
     - fi
-    - echo "GitHub Actions workflow found - validation passed"
+    - echo "GitHub Actions workflow found validation passed"
   rules:
     - if: $CI_COMMIT_TAG
   dependencies: []
