--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,8 @@ sync-github:
     - echo "Validating GitHub received our code"
     - sleep 10
     - echo "Checking GitHub API for latest commit"
-    - curl -s -H "Authorization: token ${GITHUB_TOKEN}" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/commits/main" > github_response.json
+    - AUTH_HEADER="Authorization token ${GITHUB_TOKEN}"
+    - curl -s -H "$AUTH_HEADER" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/commits/main" > github_response.json
     - LATEST_COMMIT=$(jq -r '.sha' github_response.json)
     - echo "Latest GitHub commit"
     - echo "$LATEST_COMMIT"
@@ -93,7 +94,7 @@ sync-github:
     - fi
     - echo "GitHub commit validation passed"
     - echo "Checking if GitHub Actions workflow started"
-    - curl -s -H "Authorization: token ${GITHUB_TOKEN}" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/actions/runs?per_page=1" > workflow_response.json
+    - curl -s -H "$AUTH_HEADER" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/actions/runs?per_page=1" > workflow_response.json
     - WORKFLOW_RUNS=$(jq '.workflow_runs | length' workflow_response.json)
     - echo "Workflow runs found"
     - echo "$WORKFLOW_RUNS"
