Add minimal comment change to create new commit hash for testing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - fetch-github-results
   - sync-github
 
+# Minimal change to create new commit hash for testing
 test:
   stage: test
   image: alpine:latest
