Add debugging to git push to see why GitHub sync is failing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,12 @@ sync-github:
     - echo "Fetching latest from GitLab"
     - git fetch gitlab
     - echo "Pushing to GitHub main branch"
-    - git push origin gitlab/main:main --force
+    - git push origin gitlab/main:main --force --verbose
+    - echo "Git push exit code: $?"
+    - echo "Git remote -v output:"
+    - git remote -v
+    - echo "Git status output:"
+    - git status
     - echo "Phase 4 GitHub sync completed successfully"
     - echo "Validating GitHub received our code"
     - sleep 10
