Fix workflow: Push from GitLab working directory so HEAD refers to new commits

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,13 +63,14 @@ sync-github:
     - git config --global user.name "GitLab CI"
     - echo "Cloning GitHub repository HTTPS"
     - git clone https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git github-repo
-    - cd github-repo
     - echo "Adding GitLab as remote HTTPS"
     - git remote add gitlab https://gitlab.nrp-nautilus.io/nrp/kubevirt-terraform-provider.git
     - echo "Fetching latest from GitLab"
     - git fetch gitlab
-    - echo "Pushing to GitHub main branch"
-    - git push origin HEAD:main --force --verbose
+    - echo "Pushing to GitHub main branch from GitLab working directory"
+    - cd ..
+    - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
+    - git push github HEAD:main --force --verbose
     - echo "Git push exit code $?"
     - echo "Git remote v output"
     - git remote -v
