Fix: Create fresh git repo instead of shallow clone to avoid detached HEAD issues

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,9 +70,16 @@ sync-github:
     - echo "Pushing to GitHub main branch from GitLab working directory"
     - cd /builds/nrp/kubevirt-terraform-provider
     - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
-    - echo "Creating shallow clone for push"
-    - git clone --depth 1 --single-branch --branch main . shallow-push
-    - cd shallow-push
+    - echo "Creating new git repo with current files"
+    - mkdir fresh-push
+    - cd fresh-push
+    - git init
+    - git config user.email "ci@gitlab.nrp-nautilus.io"
+    - git config user.name "GitLab CI"
+    - cp -r /builds/nrp/kubevirt-terraform-provider/* .
+    - cp -r /builds/nrp/kubevirt-terraform-provider/.* . 2>/dev/null || true
+    - git add .
+    - git commit -m "Sync from GitLab - $(date)"
     - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
     - git push github main:main --force --verbose
     - echo "Git push exit code $?"
