--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,10 +76,11 @@ sync-github:
     - git init
     - git config user.email "ci@gitlab.nrp-nautilus.io"
     - git config user.name "GitLab CI"
-    - echo "Copying source files avoiding recursion"
-    - find /builds/nrp/kubevirt-terraform-provider -maxdepth 1 -not -name fresh-push -not -name .git -exec cp -r {} . \;
+    - echo "Copying source files avoiding recursion and github-repo"
+    - find /builds/nrp/kubevirt-terraform-provider -maxdepth 1 -not -name fresh-push -not -name .git -not -name github-repo -exec cp -r {} . \;
     - git add .
     - git commit -m "Sync from GitLab - $(date)"
+    - git branch -M main
     - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
     - git push github main:main --force --verbose
     - echo "Git push exit code $?"
