--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,7 @@ name: Build Terraform Provider
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -51,7 +50,6 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: test
-    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -76,8 +74,7 @@ jobs:
           retention-days: 7
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@1
         with:
           files: bin/*
           generate_release_notes: true
