Fix GitHub Actions action version and improve GitLab validation to check workflow success

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
           retention-days: 7
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@1
+        uses: softprops/action-gh-release@v1
         with:
           files: bin/*
           generate_release_notes: true
