--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
             bin/*
             bin/SHA256SUMS
           generate_release_notes: true
-          tag_name: "v0.1.$(date +%s)"
-          name: "Release $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
+          tag_name: "v0.1.${{ github.run_number }}"
+          name: "Release v0.1.${{ github.run_number }} - ${{ github.sha }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
