Update workflow to trigger on clean-history branch to create releases with SHA256SUMS

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Continuous Build Terraform Provider
 
 on:
   push:
-    branches: [ main ]
+    branches: [ clean-history ]
   pull_request:
-    branches: [ main ]
+    branches: [ clean-history ]
 
 env:
   GO_VERSION: '1.21'
