Force fresh workflow run - trigger GPG signing steps

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,3 +112,4 @@ jobs:
           name: "Release v0.1.${{ github.run_number }} - ${{ github.sha }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# Force fresh workflow run - Thu Aug 21 22:40:57 EDT 2025
